[v3] | Fix text is same color dark mode.

--- a/assets/scss/components/_modals.scss
+++ b/assets/scss/components/_modals.scss
@@ -61,6 +61,7 @@
 }
 
 .detail-value {
+  color: var(--color-text);
   font-family: var(--font-heading);
   font-size: 1.35rem;
   margin: 0.25rem 0 1.25rem;
